@@ -449,6 +449,22 @@ If this is C<true> then the user will not be asked to confirm the delete.
 
 =back
 
+=head3 stash(name, [value])
+
+If you need to create some temporary data in an object just for the life of the page, then this is how you can do it. It returns the value stored in C<name>. By default every value will be C<null>.
+
+=over
+
+=item name
+
+Required. The name of the element you wish to retrieve/store.
+
+=item value
+
+Optional. The value you'd like to store.
+
+=back
+
 
 =head2 wing.object_list()
 
