@@ -4,9 +4,15 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2018-07-06
+ * wing.object.save() in wing.vue.js now has a 200ms delay to give vue a chance to update the property.
+ * wing.throbber only animates for 200ms instead of 500ms.
+ * Added the stash() method to wing.object in wing.vue.js.
+
 2018-07-01
  * Made idea sorting pluggable.
  * Added incomprehensible option to ideas.
+ * Added Wing::Algolia.
 
 2018-06-25
  * Gave Session a self relationship.
